--- a/index.html
+++ b/index.html
@@ -3,44 +3,11 @@
 
 <head>
 	<title>Create and Display Cookies</title>
-	<script>
-		function setCookie(cname, cvalue, exdays) {
-			const d = new Date();
-			d.setTime(d.getTime() + (exdays * 24 * 60 * 60 * 1000));
-			let expires = "expires="+d.toUTCString();
-			document.cookie = cname + "=" + cvalue + ";" + expires + ";path=/";
-		}
-
-		function getCookie(cname) {
-			let name = cname + "=";
-			let ca = document.cookie.split(';');
-			for(let i = 0; i < ca.length; i++) {
-				let c = ca[i];
-				while (c.charAt(0) == ' ') {
-					c = c.substring(1);
-				}
-				if (c.indexOf(name) == 0) {
-					return c.substring(name.length, c.length);
-				}
-			}
-			return "";
-		}
-
-		function checkCookie() {
-			let user = getCookie("username");
-			if (user != "") {
-				alert("Welcome again " + user);
-			} else {
-				user = prompt("Please enter your name:", "");
-				if (user != "" && user != null) {
-					setCookie("username", user, 365);
-				}
-			}
-		}
-	</script>
+	<link rel="stylesheet" href="styles/styles.css">
 </head>
 
 <body>
+	<script src="demo_script_src.js"></script>
 	<header>
 		<h1 class = "center">Create and Display Cookies</h1>
 	</header>
