--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-	<script src="demo_script_src.js"></script>
+	<script src="scripts/cookie.js"></script>
 	<header>
 		<h1 class = "center">Create and Display Cookies</h1>
 	</header>
