--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 <head>
 	<title>Create and Display Cookies</title>
 	<link rel="stylesheet" href="styles/styles.css">
+	<script src="scripts/cookie.js"></script>
 </head>
 
-<body>
-	<script src="scripts/cookie.js"></script>
+<body onload="checkCookie()">
 	<header>
 		<h1 class = "center">Create and Display Cookies</h1>
 	</header>
